--- a/nyt-article-recreation-marshfield.Rmd
+++ b/nyt-article-recreation-marshfield.Rmd
@@ -91,7 +91,7 @@ marshfield <-
 
 ## Daily Growth Rate
 
-To assess the possible future of the outbreak, it's helpful to look not just at the number of cases but also at how quickly they are increasing. The accompanying chart shows the growth rate of cumulative cases over time, averaged over the previous week.
+To assess the possible future of the outbreak, it's helpful to look not just at the number of cases but also at how quickly they are increasing. The accompanying chart shows the growth rate of cumulative cases over time, averaged over the previous `r window` days.
 
 #### Daily growth rate of confirmed cases
 
@@ -330,13 +330,13 @@ fig3 <- plot_ly(data = plot_data,
                text = ~paste0("</br>", Name,
                              "</br>", Date,
                              "</br>Cases: ", Cases, 
-                             "</br>New Cases (Daily Average over Last ", window, " Days): ", `New Cases`),
+                             "</br>New Cases (over Last ", window, " Days): ", `New Cases`),
                type = "scatter",
                mode = 'lines+markers',
                colors = "Paired",
                # alpha = 0.5,
                hoverinfo = "text") %>% 
-  layout(yaxis = list(title = paste0("New Cases (Daily Average over Last ", window, " Days)"))) %>% 
+  layout(yaxis = list(title = paste0("New Cases (over Last ", window, " Days)"))) %>% 
   config(doubleClickDelay = 500)
 
 fig3
@@ -386,14 +386,14 @@ fig4 <- plot_ly(data = plot_data,
                text = ~paste0("</br>", Name,
                              "</br>", Date,
                              "</br>Cases Per Thousand: ", `Cases Per Thousand People`, 
-                             "</br>New Cases Per Thousand </br>(Daily Average over Last ", window, " Days): ", `New Cases Per Thousand People`),
+                             "</br>New Cases Per Thousand </br>(over Last ", window, " Days): ", `New Cases Per Thousand People`),
                type = "scatter",
                mode = 'lines+markers',
                colors = "Paired",
                # alpha = 0.5,
                hoverinfo = "text") %>% 
   layout(xaxis = list(title = "Cases Per Thousand People"),
-         yaxis = list(title = paste0("New Cases Per Thousand People (Daily Average over Last ", window, " Days)"))) %>% 
+         yaxis = list(title = paste0("New Cases Per Thousand People (over Last ", window, " Days)"))) %>% 
   config(doubleClickDelay = 500)
 
 fig4
@@ -422,7 +422,7 @@ fig4
 <!--                                 align = "right",  -->
 <!--                                 partial = FALSE)) %>%  -->
 <!--   ungroup() %>%  -->
-<!--   mutate(`New Cases Per Thousand People (Daily Average over Last 7 Days)` = round(roll.cases / population * 1000, 3)) %>%  -->
+<!--   mutate(`New Cases Per Thousand People (over Last 7 Days)` = round(roll.cases / population * 1000, 3)) %>%  -->
 <!--   rename(Name = county.state, -->
 <!--          Date = date, -->
 <!--          Cases = cases) %>%  -->
@@ -430,12 +430,12 @@ fig4
 
 <!-- fig5 <- plot_ly(data = plot_data, -->
 <!--                x = ~Cases, -->
-<!--                y = ~`New Cases Per Thousand People (Daily Average over Last 7 Days)`, -->
+<!--                y = ~`New Cases Per Thousand People (over Last 7 Days)`, -->
 <!--                color = ~Name, -->
 <!--                text = ~paste0("</br>", Name, -->
 <!--                              "</br>", Date, -->
 <!--                              "</br>Cases: ", Cases,  -->
-<!--                              "</br>New Cases Per Thousand </br>(Daily Average over Last 7 Days): ", `New Cases Per Thousand People (Daily Average over Last 7 Days)`), -->
+<!--                              "</br>New Cases Per Thousand </br>(over Last 7 Days): ", `New Cases Per Thousand People (over Last 7 Days)`), -->
 <!--                type = "scatter", -->
 <!--                mode = 'lines+markers', -->
 <!--                colors = "Paired", -->
@@ -463,7 +463,7 @@ fig4
 <!--                                 align = "right",  -->
 <!--                                 partial = FALSE)) %>%  -->
 <!--   ungroup() %>%  -->
-<!--   mutate(`New Cases (Daily Average over Last 7 Days)` = roll.cases) %>%  -->
+<!--   mutate(`New Cases (over Last 7 Days)` = roll.cases) %>%  -->
 <!--   rename(Name = county.state, -->
 <!--          Date = date, -->
 <!--          Cases = cases) %>%  -->
@@ -471,12 +471,12 @@ fig4
 
 <!-- fig6 <- plot_ly(data = plot_data, -->
 <!--                x = ~Date, -->
-<!--                y = ~`New Cases (Daily Average over Last 7 Days)`, -->
+<!--                y = ~`New Cases (over Last 7 Days)`, -->
 <!--                color = ~Name, -->
 <!--                text = ~paste0("</br>", Name, -->
 <!--                              "</br>", Date, -->
 <!--                              "</br>Cases: ", Cases,  -->
-<!--                              "</br>New Cases (Daily Average over Last 7 Days): ", `New Cases (Daily Average over Last 7 Days)`), -->
+<!--                              "</br>New Cases (over Last 7 Days): ", `New Cases (over Last 7 Days)`), -->
 <!--                type = "scatter", -->
 <!--                mode = 'lines+markers', -->
 <!--                colors = "Paired", -->
@@ -504,7 +504,7 @@ fig4
 <!--                                 align = "right",  -->
 <!--                                 partial = FALSE)) %>%  -->
 <!--   ungroup() %>%  -->
-<!--   mutate(`New Cases Per Thousand People (Daily Average over Last 7 Days)` = round(roll.cases / population * 1000, 3)) %>%  -->
+<!--   mutate(`New Cases Per Thousand People (over Last 7 Days)` = round(roll.cases / population * 1000, 3)) %>%  -->
 <!--   rename(Name = county.state, -->
 <!--          Date = date, -->
 <!--          Cases = cases) %>%  -->
@@ -512,12 +512,12 @@ fig4
 
 <!-- fig7 <- plot_ly(data = plot_data, -->
 <!--                x = ~Date, -->
-<!--                y = ~`New Cases Per Thousand People (Daily Average over Last 7 Days)`, -->
+<!--                y = ~`New Cases Per Thousand People (over Last 7 Days)`, -->
 <!--                color = ~Name, -->
 <!--                text = ~paste0("</br>", Name, -->
 <!--                              "</br>", Date, -->
 <!--                              "</br>Cases: ", Cases,  -->
-<!--                              "</br>New Cases Per Thousand </br>(Daily Average over Last 7 Days): ", `New Cases Per Thousand People (Daily Average over Last 7 Days)`), -->
+<!--                              "</br>New Cases Per Thousand </br>(over Last 7 Days): ", `New Cases Per Thousand People (over Last 7 Days)`), -->
 <!--                type = "scatter", -->
 <!--                mode = 'lines+markers', -->
 <!--                colors = "Paired", -->
@@ -545,7 +545,7 @@ fig4
 <!--                                 align = "right",  -->
 <!--                                 partial = FALSE)) %>%  -->
 <!--   ungroup() %>%  -->
-<!--   mutate(`New Cases (Daily Average over Last 7 Days)` = roll.cases) %>%  -->
+<!--   mutate(`New Cases (over Last 7 Days)` = roll.cases) %>%  -->
 <!--   mutate(`Cases Per Thousand People` = round(cases / population * 1000, 3)) %>%  -->
 <!--   rename(Name = county.state, -->
 <!--          Date = date, -->
@@ -554,12 +554,12 @@ fig4
 
 <!-- fig8 <- plot_ly(data = plot_data, -->
 <!--                x = ~`Cases Per Thousand People`, -->
-<!--                y = ~`New Cases (Daily Average over Last 7 Days)`, -->
+<!--                y = ~`New Cases (over Last 7 Days)`, -->
 <!--                color = ~Name, -->
 <!--                text = ~paste0("</br>", Name, -->
 <!--                              "</br>", Date, -->
 <!--                              "</br>Cases Per Thousand: ", `Cases Per Thousand People`,  -->
-<!--                              "</br>New Cases (Daily Average over Last 7 Days): ", `New Cases (Daily Average over Last 7 Days)`), -->
+<!--                              "</br>New Cases (over Last 7 Days): ", `New Cases (over Last 7 Days)`), -->
 <!--                type = "scatter", -->
 <!--                mode = 'lines+markers', -->
 <!--                colors = "Paired", -->
@@ -659,12 +659,12 @@ $$
 \textrm{avg daily change}_t =  \left( \frac{\textrm{cases}_t}{\textrm{cases}_{t-`r window`}} \right)^{(1/`r window`)} - 1 
 $$
 
-## Appendix: Calculating New Cases (Daily Average over Last `r window` Days)
+## Appendix: Calculating New Cases (over Last `r window` Days)
 
-Calculate "New Cases (Daily Average over Last `r window` Days)" at time $t$ as
+Calculate "New Cases (over Last `r window` Days)" at time $t$ as
 
 $$
-\textrm{new cases}_t =  \frac{1}{`r window`}\left( \textrm{cases}_t-\textrm{cases}_{t-`r window`}\right)
+\textrm{new cases}_t = \left(\textrm{cases}_t-\textrm{cases}_{t-`r window`}\right)
 $$
 
 <!-- ## Appendix: Calculating Doubling Time -->
