--- a/nyt-article-recreation-gundersen.Rmd
+++ b/nyt-article-recreation-gundersen.Rmd
@@ -319,7 +319,7 @@ plot_data <-
                                 align = "right", 
                                 partial = FALSE)) %>% 
   ungroup() %>% 
-  mutate(`New Cases (over Last 7 Days)` = roll.cases) %>% 
+  mutate(`New Cases (Last 7 Days)` = roll.cases) %>% 
   rename(Name = county.state,
          Date = date,
          Cases = cases) %>% 
@@ -327,18 +327,18 @@ plot_data <-
 
 fig3 <- plot_ly(data = plot_data,
                x = ~Cases,
-               y = ~`New Cases (over Last 7 Days)`,
+               y = ~`New Cases (Last 7 Days)`,
                color = ~Name,
                text = ~paste0("</br>", Name,
                              "</br>", Date,
                              "</br>Cases: ", Cases, 
-                             "</br>New Cases (over Last 7 Days): ", `New Cases (over Last 7 Days)`),
+                             "</br>New Cases (Last 7 Days): ", `New Cases (Last 7 Days)`),
                type = "scatter",
                mode = 'lines+markers',
                colors = "Paired",
                # alpha = 0.5,
                hoverinfo = "text") %>% 
-  layout(yaxis = list(title = "New Cases (over Last 7 Days)")) %>% 
+  layout(yaxis = list(title = "New Cases (Last 7 Days)")) %>% 
   config(doubleClickDelay = 500)
 
 fig3
@@ -374,7 +374,7 @@ plot_data <-
                                 align = "right", 
                                 partial = FALSE)) %>% 
   ungroup() %>% 
-  mutate(`New Cases Per Thousand People (over Last 7 Days)` = round(roll.cases / population * 1000, 3)) %>% 
+  mutate(`New Cases Per Thousand People (Last 7 Days)` = round(roll.cases / population * 1000, 3)) %>% 
   mutate(`Cases Per Thousand People` = round(cases / population * 1000, 3)) %>% 
   rename(Name = county.state,
          Date = date,
@@ -383,19 +383,19 @@ plot_data <-
 
 fig4 <- plot_ly(data = plot_data,
                x = ~`Cases Per Thousand People`,
-               y = ~`New Cases Per Thousand People (over Last 7 Days)`,
+               y = ~`New Cases Per Thousand People (Last 7 Days)`,
                color = ~Name,
                text = ~paste0("</br>", Name,
                              "</br>", Date,
                              "</br>Cases Per Thousand: ", `Cases Per Thousand People`, 
-                             "</br>New Cases Per Thousand </br>(over Last 7 Days): ", `New Cases Per Thousand People (over Last 7 Days)`),
+                             "</br>New Cases Per Thousand </br>(Last 7 Days): ", `New Cases Per Thousand People (Last 7 Days)`),
                type = "scatter",
                mode = 'lines+markers',
                colors = "Paired",
                # alpha = 0.5,
                hoverinfo = "text") %>% 
   layout(xaxis = list(title = "Cases Per Thousand People"),
-         yaxis = list(title = "New Cases Per Thousand People (over Last 7 Days)")) %>% 
+         yaxis = list(title = "New Cases Per Thousand People (Last 7 Days)")) %>% 
   config(doubleClickDelay = 500)
 
 fig4
@@ -424,7 +424,7 @@ fig4
 <!--                                 align = "right",  -->
 <!--                                 partial = FALSE)) %>%  -->
 <!--   ungroup() %>%  -->
-<!--   mutate(`New Cases Per Thousand People (over Last 7 Days)` = round(roll.cases / population * 1000, 3)) %>%  -->
+<!--   mutate(`New Cases Per Thousand People (Last 7 Days)` = round(roll.cases / population * 1000, 3)) %>%  -->
 <!--   rename(Name = county.state, -->
 <!--          Date = date, -->
 <!--          Cases = cases) %>%  -->
@@ -432,12 +432,12 @@ fig4
 
 <!-- fig5 <- plot_ly(data = plot_data, -->
 <!--                x = ~Cases, -->
-<!--                y = ~`New Cases Per Thousand People (over Last 7 Days)`, -->
+<!--                y = ~`New Cases Per Thousand People (Last 7 Days)`, -->
 <!--                color = ~Name, -->
 <!--                text = ~paste0("</br>", Name, -->
 <!--                              "</br>", Date, -->
 <!--                              "</br>Cases: ", Cases,  -->
-<!--                              "</br>New Cases Per Thousand </br>(over Last 7 Days): ", `New Cases Per Thousand People (over Last 7 Days)`), -->
+<!--                              "</br>New Cases Per Thousand </br>(Last 7 Days): ", `New Cases Per Thousand People (Last 7 Days)`), -->
 <!--                type = "scatter", -->
 <!--                mode = 'lines+markers', -->
 <!--                colors = "Paired", -->
@@ -465,7 +465,7 @@ fig4
 <!--                                 align = "right",  -->
 <!--                                 partial = FALSE)) %>%  -->
 <!--   ungroup() %>%  -->
-<!--   mutate(`New Cases (over Last 7 Days)` = roll.cases) %>%  -->
+<!--   mutate(`New Cases (Last 7 Days)` = roll.cases) %>%  -->
 <!--   rename(Name = county.state, -->
 <!--          Date = date, -->
 <!--          Cases = cases) %>%  -->
@@ -473,12 +473,12 @@ fig4
 
 <!-- fig6 <- plot_ly(data = plot_data, -->
 <!--                x = ~Date, -->
-<!--                y = ~`New Cases (over Last 7 Days)`, -->
+<!--                y = ~`New Cases (Last 7 Days)`, -->
 <!--                color = ~Name, -->
 <!--                text = ~paste0("</br>", Name, -->
 <!--                              "</br>", Date, -->
 <!--                              "</br>Cases: ", Cases,  -->
-<!--                              "</br>New Cases (over Last 7 Days): ", `New Cases (over Last 7 Days)`), -->
+<!--                              "</br>New Cases (Last 7 Days): ", `New Cases (Last 7 Days)`), -->
 <!--                type = "scatter", -->
 <!--                mode = 'lines+markers', -->
 <!--                colors = "Paired", -->
@@ -506,7 +506,7 @@ fig4
 <!--                                 align = "right",  -->
 <!--                                 partial = FALSE)) %>%  -->
 <!--   ungroup() %>%  -->
-<!--   mutate(`New Cases Per Thousand People (over Last 7 Days)` = round(roll.cases / population * 1000, 3)) %>%  -->
+<!--   mutate(`New Cases Per Thousand People (Last 7 Days)` = round(roll.cases / population * 1000, 3)) %>%  -->
 <!--   rename(Name = county.state, -->
 <!--          Date = date, -->
 <!--          Cases = cases) %>%  -->
@@ -514,12 +514,12 @@ fig4
 
 <!-- fig7 <- plot_ly(data = plot_data, -->
 <!--                x = ~Date, -->
-<!--                y = ~`New Cases Per Thousand People (over Last 7 Days)`, -->
+<!--                y = ~`New Cases Per Thousand People (Last 7 Days)`, -->
 <!--                color = ~Name, -->
 <!--                text = ~paste0("</br>", Name, -->
 <!--                              "</br>", Date, -->
 <!--                              "</br>Cases: ", Cases,  -->
-<!--                              "</br>New Cases Per Thousand </br>(over Last 7 Days): ", `New Cases Per Thousand People (over Last 7 Days)`), -->
+<!--                              "</br>New Cases Per Thousand </br>(Last 7 Days): ", `New Cases Per Thousand People (Last 7 Days)`), -->
 <!--                type = "scatter", -->
 <!--                mode = 'lines+markers', -->
 <!--                colors = "Paired", -->
@@ -547,7 +547,7 @@ fig4
 <!--                                 align = "right",  -->
 <!--                                 partial = FALSE)) %>%  -->
 <!--   ungroup() %>%  -->
-<!--   mutate(`New Cases (over Last 7 Days)` = roll.cases) %>%  -->
+<!--   mutate(`New Cases (Last 7 Days)` = roll.cases) %>%  -->
 <!--   mutate(`Cases Per Thousand People` = round(cases / population * 1000, 3)) %>%  -->
 <!--   rename(Name = county.state, -->
 <!--          Date = date, -->
@@ -556,12 +556,12 @@ fig4
 
 <!-- fig8 <- plot_ly(data = plot_data, -->
 <!--                x = ~`Cases Per Thousand People`, -->
-<!--                y = ~`New Cases (over Last 7 Days)`, -->
+<!--                y = ~`New Cases (Last 7 Days)`, -->
 <!--                color = ~Name, -->
 <!--                text = ~paste0("</br>", Name, -->
 <!--                              "</br>", Date, -->
 <!--                              "</br>Cases Per Thousand: ", `Cases Per Thousand People`,  -->
-<!--                              "</br>New Cases (over Last 7 Days): ", `New Cases (over Last 7 Days)`), -->
+<!--                              "</br>New Cases (Last 7 Days): ", `New Cases (Last 7 Days)`), -->
 <!--                type = "scatter", -->
 <!--                mode = 'lines+markers', -->
 <!--                colors = "Paired", -->
@@ -705,9 +705,9 @@ $$
 \textrm{avg daily change}_t =  \left( \frac{\textrm{cases}_t}{\textrm{cases}_{t-7}} \right)^{(1/7)} - 1 
 $$
 
-## Appendix: Calculating New Cases (over Last 7 Days)
+## Appendix: Calculating New Cases (Last 7 Days)
 
-Calculate "New Cases (over Last 7 Days)" at time $t$ as
+Calculate "New Cases (Last 7 Days)" at time $t$ as
 
 $$
 \textrm{new cases}_t = \left(\textrm{cases}_t-\textrm{cases}_{t-7}\right)
